should have committed all this a long time ago

--- a/src/patternlab-files/viewall.mustache
+++ b/src/patternlab-files/viewall.mustache
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="../../styleguide/css/styleguide.css" media="all" />
     <link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css" media="all" />
     <link rel="stylesheet" href="../../css/style.css" media="all" />
+
+    <!--Import fonts-->
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6578432/738084/css/fonts.css" />
+    <!-- inject:css -->
+    <link rel="stylesheet" href="../../../../bower_components/highlightjs/styles/default.css">
+    <link rel="stylesheet" href="../../../../dest/style.css">
+    <!-- endinject -->
+
   </head>
   <body class="sg-pattern-list">
 
