--- a/src/scss/_shame.scss
+++ b/src/scss/_shame.scss
@@ -23,281 +23,212 @@
 //
 
 // @todo refactor into components
-.site-name {
-  font-style: italic;
-  line-height: 0.9;
-  font-weight: 800;
-  position: relative;
-  z-index: 2;
-  color: red;
-  [class|="word"] {
-    //    @include debug();
-    display: block;
-    text-shadow: 2px 2px 0px white, -2px -2px 0px white;
-    position: relative;
-    &:before {
-      content: attr(data-dupe-text);
-      position: absolute;
-      color: teal;
-      top: -2px;
-      left: 4px;
-      mix-blend-mode: multiply;
-      //mix-blend-mode: screen;
-    }
-    &:after {
-      content: attr(data-dupe-text);
-      position: absolute;
-      color: gold;
-      top: 3px;
-      left: 3px;
-      mix-blend-mode: hard-light;
-      //@include try-blend-modes();
-    }
-  }
-  .word-1 {
-    float: left;
-    font-size: 0.5em;
-    -webkit-transform: translateX(47px) translateY(-13px);
-    position: absolute;
-    font-weight: 100;
-  }
-  .word-2 {
-    //    -webkit-transform: translateX(4px) translateY(3px);
-    //    position: relative;
-  }
-}
-
-.site-subtitle {
-  font-style: italic;
-  font-weight: 100;
-  font-variant: small-caps;
-  margin-top: -19px;
-  //  margin-left: 166px;
-  border-top: 4px solid black;
-  display: inline-block;
-  line-height: 1;
-  //  margin-left: 20px;
-  padding-left: 1em;
-  padding-right: 1em;
-  position: relative;
-  z-index: 1;
-  -webkit-transform: rotate(-5deg);
-  -webkit-transform-origin: 24% 50%;
-  span {
-    display: block;
-    -webkit-transform: rotate(5deg);
-    -webkit-transform-origin: 8% 50%;
-  }
-}
-
-.svg-defs {
-  position: absolute;
-  width: 0;
-  height: 0;
-}
-
-.jag {
-  &-right {
-    image {
-      clip-path: url(#jag-right);
-    }
-  }
-  &-left {
-    //    margin-left: -16px;
-    image {
-      clip-path: url(#jag-left);
-    }
-  }
-  &-both {
-    //    margin-left: -16px;
-    image {
-      clip-path: url(#jag-both);
-    }
-  }
-}
-
-@function jag-right-edge($height, $direction, $depth, $count) {
-  $right-edge: '';
-  $x: 0;
-  $y: 0;
-  $comma: ", ";
-  @for $i from 1 through $count {
-    @if ($i % 2 == 0) {
-      @if $direction == left {
-        $x: '100%';
-      } @else {
-        $x: 100% - $depth;
-      }
-    }
-    @else {
-      @if $direction == left {
-        $x: 100% - $depth;
-      } @else {
-        $x: '100%';
-      }
-    }
-    $y: $i * ($height / $count);
-    @if $y == $height {
-      $y: 100%;
-    }
-    @if $i == $count {
-      $comma: '';
-    }
-    $right-edge: #{$right-edge} #{$x} #{$y}#{$comma};
-  }
-  @return $right-edge;
-}
-
-@function jag-left-edge($height, $direction, $depth, $count) {
-  $left-edge: '';
-  $x: 0;
-  $y: 0;
-  $comma: ", ";
-  @for $i from $count through 1 {
-    @if ($i % 2 == 0) {
-      @if $direction == left {
-        $x: $depth;
-      } @else {
-        $x: '0';
-      }
-    } @else {
-      @if $direction == left {
-        $x: '0';
-      } @else {
-        $x: $depth;
-      }
-    }
-    $y: $i * ($height / $count);
-    @if $y == $height {
-      $y: 100%;
-    }
-    @if $i == 1 {
-      $comma: '';
-    }
-    $left-edge: #{$left-edge} #{$x} #{$y}#{$comma};
-  }
-  @return $left-edge;
-}
-
-@mixin add-prefix($property, $value) {
-  -webkit-#{$property}: $value;
-  -moz-#{$property}: $value;
-  -ms-#{$property}: $value;
-  #{$property}: $value;
-}
-
-@mixin jag-edge($side: right, $direction: left, $height: 300px, $depth: 5%, $count: 10) {
-  @if $side == right {
-    $right-edge: jag-right-edge($height, $direction, $depth, $count);
-    @if $direction == left {
-      @include add-prefix(clip-path, polygon(0 0, 100% 0, #{$right-edge}, 0 100%));
-    } @else {
-      @include add-prefix(clip-path, polygon(0 0, #{100% - $depth} 0, #{$right-edge}, 0 100%));
-    }
-  }
-  @if $side == left {
-    $left-edge: jag-left-edge($height, $direction, $depth, $count);
-    @if $direction == left {
-      @include add-prefix(clip-path, polygon(#{$depth} 0, 100% 0, 100% 100%, 0 100%, #{$left-edge}));
-    } @else {
-      @include add-prefix(clip-path, polygon(0 0, 100% 0, 100% 100%, 0 100%, #{$left-edge}));
-    }
-  }
-  @if $side == both {
-    $right-edge: jag-right-edge($height, $direction, $depth, $count);
-    $left-edge: jag-left-edge($height, $direction, $depth, $count);
-    @if $direction == left {
-      @include add-prefix(clip-path, polygon(#{$depth} 0, 100% 0, #{$right-edge}, 0 100%, #{$left-edge}));
-    } @else {
-      @include add-prefix(clip-path, polygon(0 0, #{100% - $depth} 0, #{$right-edge}, 0 100%, #{$left-edge}));
-    }
-  }
-}
-
-.portfolio--project {
-  position: relative;
-  clear: both;
-}
-
-.project--image,
-.project--lead {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out;
-  position: relative;
-  width: 300px;
-  height: 300px;
-  display: block;
-  overflow: hidden;
-  float: left;
-  z-index: 0;
-}
-.project--lead {
-  //  @include jag-edge(right, $direction: right, $depth: 50%, $count: 99);
-  padding: 0.5rem 4rem 0.5rem 0.5rem;
-  background-color: lightgrey;
-}
-.project--image {
-  @include jag-edge(both, $direction: right, $depth: 50%, $count: 99);
-  margin-left: -150px;
-  &:hover {
-    @include jag-edge(both, $direction: right, $depth: 0%, $count: 99);
-    z-index: 1;
-  }
-  &:last-of-type {
-    @include jag-edge(left, $direction: right, $depth: 50%, $count: 99);
-    &:hover {
-      @include jag-edge(left, $direction: right, $depth: 0%, $count: 99);
-      z-index: 1;
-    }
-  }
-  &.opt-2 {
-    @include jag-edge(both, $direction: right, $depth: 50%, $count: 1);
-    margin-left: -150px;
-    &:hover {
-      @include jag-edge(both, $direction: right, $depth: 0%, $count: 1);
-      z-index: 1;
-    }
-    &:last-of-type {
-      @include jag-edge(left, $direction: right, $depth: 50%, $count: 1);
-      &:hover {
-        @include jag-edge(left, $direction: right, $depth: 0%, $count: 1);
-        z-index: 1;
-      }
-    }
-  }
-  &.opt-3 {
-    @include jag-edge(both, $direction: right, $depth: 50%, $count: 3);
-    margin-left: -150px;
-    &:hover {
-      @include jag-edge(both, $direction: right, $depth: 0%, $count: 3);
-      z-index: 1;
-    }
-    &:last-of-type {
-      @include jag-edge(left, $direction: right, $depth: 50%, $count: 3);
-      &:hover {
-        @include jag-edge(left, $direction: right, $depth: 0%, $count: 3);
-        z-index: 1;
-      }
-    }
-  }
-  &.opt-4 {
-    @include jag-edge(both, $direction: right, $depth: 5%, $count: 10);
-    margin-left: -16px;
-    &:hover {
-      @include jag-edge(both, $direction: right, $depth: 0%, $count: 10);
-      z-index: 1;
-    }
-    &:last-of-type {
-      @include jag-edge(left, $direction: right, $depth: 5%, $count: 10);
-      &:hover {
-        @include jag-edge(left, $direction: right, $depth: 0%, $count: 10);
-        z-index: 1;
-      }
-    }
-  }
-}
-
-* {
-  color: greenyellow;
-}
+//
+//
+//.svg-defs {
+//  position: absolute;
+//  width: 0;
+//  height: 0;
+//}
+//
+//.jag {
+//  &-right {
+//    image {
+//      clip-path: url(#jag-right);
+//    }
+//  }
+//  &-left {
+//    //    margin-left: -16px;
+//    image {
+//      clip-path: url(#jag-left);
+//    }
+//  }
+//  &-both {
+//    //    margin-left: -16px;
+//    image {
+//      clip-path: url(#jag-both);
+//    }
+//  }
+//}
+//
+//@function jag-right-edge($height, $direction, $depth, $count) {
+//  $right-edge: '';
+//  $x: 0;
+//  $y: 0;
+//  $comma: ", ";
+//  @for $i from 1 through $count {
+//    @if ($i % 2 == 0) {
+//      @if $direction == left {
+//        $x: '100%';
+//      } @else {
+//        $x: 100% - $depth;
+//      }
+//    }
+//    @else {
+//      @if $direction == left {
+//        $x: 100% - $depth;
+//      } @else {
+//        $x: '100%';
+//      }
+//    }
+//    $y: $i * ($height / $count);
+//    @if $y == $height {
+//      $y: 100%;
+//    }
+//    @if $i == $count {
+//      $comma: '';
+//    }
+//    $right-edge: #{$right-edge} #{$x} #{$y}#{$comma};
+//  }
+//  @return $right-edge;
+//}
+//
+//@function jag-left-edge($height, $direction, $depth, $count) {
+//  $left-edge: '';
+//  $x: 0;
+//  $y: 0;
+//  $comma: ", ";
+//  @for $i from $count through 1 {
+//    @if ($i % 2 == 0) {
+//      @if $direction == left {
+//        $x: $depth;
+//      } @else {
+//        $x: '0';
+//      }
+//    } @else {
+//      @if $direction == left {
+//        $x: '0';
+//      } @else {
+//        $x: $depth;
+//      }
+//    }
+//    $y: $i * ($height / $count);
+//    @if $y == $height {
+//      $y: 100%;
+//    }
+//    @if $i == 1 {
+//      $comma: '';
+//    }
+//    $left-edge: #{$left-edge} #{$x} #{$y}#{$comma};
+//  }
+//  @return $left-edge;
+//}
+//
+//@mixin add-prefix($property, $value) {
+//  -webkit-#{$property}: $value;
+//  -moz-#{$property}: $value;
+//  -ms-#{$property}: $value;
+//  #{$property}: $value;
+//}
+//
+//@mixin jag-edge($side: right, $direction: left, $height: 300px, $depth: 5%, $count: 10) {
+//  @if $side == right {
+//    $right-edge: jag-right-edge($height, $direction, $depth, $count);
+//    @if $direction == left {
+//      @include add-prefix(clip-path, polygon(0 0, 100% 0, #{$right-edge}, 0 100%));
+//    } @else {
+//      @include add-prefix(clip-path, polygon(0 0, #{100% - $depth} 0, #{$right-edge}, 0 100%));
+//    }
+//  }
+//  @if $side == left {
+//    $left-edge: jag-left-edge($height, $direction, $depth, $count);
+//    @if $direction == left {
+//      @include add-prefix(clip-path, polygon(#{$depth} 0, 100% 0, 100% 100%, 0 100%, #{$left-edge}));
+//    } @else {
+//      @include add-prefix(clip-path, polygon(0 0, 100% 0, 100% 100%, 0 100%, #{$left-edge}));
+//    }
+//  }
+//  @if $side == both {
+//    $right-edge: jag-right-edge($height, $direction, $depth, $count);
+//    $left-edge: jag-left-edge($height, $direction, $depth, $count);
+//    @if $direction == left {
+//      @include add-prefix(clip-path, polygon(#{$depth} 0, 100% 0, #{$right-edge}, 0 100%, #{$left-edge}));
+//    } @else {
+//      @include add-prefix(clip-path, polygon(0 0, #{100% - $depth} 0, #{$right-edge}, 0 100%, #{$left-edge}));
+//    }
+//  }
+//}
+//
+//.portfolio--project {
+//  position: relative;
+//  clear: both;
+//}
+//
+//.project--image,
+//.project--lead {
+//  transition-property: all;
+//  transition-duration: 0.2s;
+//  transition-timing-function: ease-in-out;
+//  position: relative;
+//  width: 300px;
+//  height: 300px;
+//  display: block;
+//  overflow: hidden;
+//  float: left;
+//  z-index: 0;
+//}
+//.project--lead {
+//  //  @include jag-edge(right, $direction: right, $depth: 50%, $count: 99);
+//  padding: 0.5rem 4rem 0.5rem 0.5rem;
+//  background-color: lightgrey;
+//}
+//.project--image {
+//  @include jag-edge(both, $direction: right, $depth: 50%, $count: 99);
+//  margin-left: -150px;
+//  &:hover {
+//    @include jag-edge(both, $direction: right, $depth: 0%, $count: 99);
+//    z-index: 1;
+//  }
+//  &:last-of-type {
+//    @include jag-edge(left, $direction: right, $depth: 50%, $count: 99);
+//    &:hover {
+//      @include jag-edge(left, $direction: right, $depth: 0%, $count: 99);
+//      z-index: 1;
+//    }
+//  }
+//  &.opt-2 {
+//    @include jag-edge(both, $direction: right, $depth: 50%, $count: 1);
+//    margin-left: -150px;
+//    &:hover {
+//      @include jag-edge(both, $direction: right, $depth: 0%, $count: 1);
+//      z-index: 1;
+//    }
+//    &:last-of-type {
+//      @include jag-edge(left, $direction: right, $depth: 50%, $count: 1);
+//      &:hover {
+//        @include jag-edge(left, $direction: right, $depth: 0%, $count: 1);
+//        z-index: 1;
+//      }
+//    }
+//  }
+//  &.opt-3 {
+//    @include jag-edge(both, $direction: right, $depth: 50%, $count: 3);
+//    margin-left: -150px;
+//    &:hover {
+//      @include jag-edge(both, $direction: right, $depth: 0%, $count: 3);
+//      z-index: 1;
+//    }
+//    &:last-of-type {
+//      @include jag-edge(left, $direction: right, $depth: 50%, $count: 3);
+//      &:hover {
+//        @include jag-edge(left, $direction: right, $depth: 0%, $count: 3);
+//        z-index: 1;
+//      }
+//    }
+//  }
+//  &.opt-4 {
+//    @include jag-edge(both, $direction: right, $depth: 5%, $count: 10);
+//    margin-left: -16px;
+//    &:hover {
+//      @include jag-edge(both, $direction: right, $depth: 0%, $count: 10);
+//      z-index: 1;
+//    }
+//    &:last-of-type {
+//      @include jag-edge(left, $direction: right, $depth: 5%, $count: 10);
+//      &:hover {
+//        @include jag-edge(left, $direction: right, $depth: 0%, $count: 10);
+//        z-index: 1;
+//      }
+//    }
+//  }
+//}
