--- a/src/scss/00-config/03-mixins/_design.scss
+++ b/src/scss/00-config/03-mixins/_design.scss
@@ -63,6 +63,15 @@
   }
 }
 
+/// Try font styles.
+/// Writes values as commented-out css you can turn on and off in your browser inspector
+/// @link https://github.com/at-import/try
+@mixin try-font-styles() {
+  @each $font-style in (normal, italic) {
+    /* font-style: #{$font-style}; */
+  }
+}
+
 /// Try font sizes using Modular Scale.
 /// Writes values as commented-out css you can turn on and off in your browser inspector
 /// @link https://github.com/at-import/try
@@ -145,6 +154,7 @@
   @include try-borders();
   @include try-fonts();
   @include try-font-weights();
+  @include try-font-styles();
   @include try-ms();
   @include try-blend-modes();
   @include try-background-gradients();
@@ -158,6 +168,7 @@
 @mixin try-all-type() {
   @include try-fonts();
   @include try-font-weights();
+  @include try-font-styles();
   @include try-ms();
   @include try-letter-spacing();
   @include try-line-height();
